--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "main": "dist/solarsys-game.umd.js",
+  "module": "dist/solarsys-game.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/solarsys-game.es.js",
+      "require": "./dist/solarsys-game.umd.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,5 +27,9 @@
     "@vitejs/plugin-vue": "^5.0.0",
     "vite": "^5.0.0",
     "vitest": "^1.0.0"
+  },
+  "peerDependencies": {
+    "vue": "^3.4.0",
+    "socket.io-client": "^4.7.0"
   }
 } 
